# husky_gps_navigation

./: CMakeLists.txt  package.xml
include/husky_gps_navigation/: gps_waypoint_collector.hpp  nav2_wp_follower_client.hpp
launch/: gps_wp_collector.launch.py  gps_wp_collector_sim.launch.py  gps_wp_follower_client.launch.py  sensors.launch.py
params/: gps_collected_points.yaml  navigation_config.yaml
src/: gps_waypoint_collector.cpp  nav2_wp_follower_client.cpp
